# SPL

./: README.md
Assignment1/include/: Action.h  Customer.h  main.cpp
Assignment1/src/: Action.cpp  Action.cpp~  Studio.cpp  Studio.cpp~  Trainer.cpp~  Workout.cpp  main.cpp~
Assignment2/: pom.xml
Assignment2/src/main/java/Tests/: CPUTest.java  MessageBusImplTest.java
Assignment2/src/main/java/bgu/spl/mics/: Callback.java  MessageBusImpl.java  MicroService.java
Assignment2/src/main/java/bgu/spl/mics/Broadcasts/: PublishConferenceBroadcast.java
Assignment2/src/main/java/bgu/spl/mics/Events/: FinishedTestModelEvent.java  TestModelEvent.java
Assignment3/Client/include/: ConnectionHandler.h  ReadMessage.h  WriteMessage.h
Assignment3/Client/src/: ConnectionHandler.cpp  ReadMessage.cpp  WriteMessage.cpp  echoClient.cpp
Assignment4/: DAO.py  Repository.py  main.py  spl4.db
C ++ memory managment Gym/: CMakeLists.txt  input.txt
C ++ memory managment Gym/include/: Studio.h  Trainer.h  Workout.h
C ++ memory managment Gym/src/: Customer.cpp  main.cpp
Client-Server Messaging system/: ReadMe.txt
Client-Server Messaging system/Client/: CMakeLists.txt  makefile
Multi-Threading Trainer/src/main/java/Tests/: FutureTest.java  GPUTest.java
Multi-Threading Trainer/src/main/java/bgu/spl/mics/: Future.java
Multi-Threading Trainer/src/main/java/bgu/spl/mics/Broadcasts/: TickBroadcast.java
Multi-Threading Trainer/src/main/java/bgu/spl/mics/Events/: FinishedPublishResultEvent.java  FinishedTrainModelEvent.java  (+2 more)
Python Database management/: DTO.py
(+51 files in other folders)
